<resources>
    <string name="app_name">Pokemon</string>
    <string name="pokemon_thumbnail">Pokemon thumbnail</string>
    <string name="hp">HP</string>
    <string name="speed">Speed</string>
    <string name="attack">Attack</string>
    <string name="special_attack">Special attack</string>
    <string name="defense">Defense</string>
    <string name="special_defense">Special defense</string>
    <string name="default_error">An error has occurred</string>
</resources>